# mydropbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECTS_GUIDE.md  QUICKREF.md  README.md  SETUP_GUIDE.md  UTILS_GUIDE.md  __init__.py  pyproject.toml  setup.py
config/: config.yaml  loadconfig.py
docs/examples/: examples.py  examples_projects.py
dropbox/: __init__.py  group_path.py  personal_path.py
mydropbox/: __init__.py
mydropbox/config/: loadconfig.py  mydropbox_config.py  mydropbox_config_template.json  mydropbox_config_template.py
mydropbox/dropbox/: __init__.py  dropbox_path.py  utils.py
mydropbox/project/: __init__.py  data.py
project/: projects.py  source.py
src/config/: config.yaml
src/dropbox/: group_path.py
src/project/: plot.py
