[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mydropbox"
version = "0.1.0"
authors = [{name = "Raphaël Bajon"}]
description = "A library for managing UHM Ocean BGC Group Dropbox paths"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]          # look for packages inside src/

[tool.setuptools.package-dir]
"" = "src"               # root package is in src/