[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mydropbox"
version = "0.1.0"
authors = [{name = "Raphaël Bajon"}]
description = "A library for managing UHM Ocean BGC Group Dropbox paths"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["mydropbox*"]